--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Display the current winner and scores -->
   <div id="scoreboard" style="text-align: center; margin-bottom: 2em;">
     <h2 id="winner">Let's Play!</h2>
-    <p id="score">Player: 0 | Computer: 0</p>
+    <p id="score">Player: 0 | CPU: 0</p>
   </div>
 
   <div class="container">
@@ -24,7 +24,7 @@
           <img id="userChoice" alt="Your Choice" class="choice-image" style="height: 100px; width: 100px;">
         </div>
         <div class="player-container" style="display: flex; flex-direction: column; align-items: center;">
-          <h2>Computer</h2>
+          <h2>CPU</h2>
           <img id="computerChoice" alt="Computer's Choice" class="choice-image" style="height: 100px; width: 100px; transform: scaleX(-1);">
         </div>
       </div><br><br><br><br><br><br><br><br>
